--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -129,6 +129,7 @@
                                     <table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
+                                                <th>Cliente</th>
                                                 <th>Fecha</th>
                                                 <th>Fecha Vencimiento</th>
                                                 <th>Ticket</th>
@@ -150,6 +151,7 @@
                                                 foreach (var item in Model.reportedet)
                                                 {
                                                     <tr>
+                                                        <td>@item.Nombre</td>
                                                         <td>@item.FechaRegistro</td>
                                                         <td>@item.FechaVencimiento</td>
                                                         <td>@item.Ticket</td>
