--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -78,7 +78,8 @@
                                             <b>No Cliente:</b>
                                             <input type="text" name="IdCliente" class="form-control" placeholder="No del cliente" />
                                         </div>
-                                        <div class="col-sm-2" style="top:20px">
+                                        <div class="col-sm-2">
+                                            <b>Fecha del:</b>
                                             @Html.DevExpress().DateEdit(settings =>
                                        {
                                            settings.Name = "FechaRango1";
@@ -86,12 +87,14 @@
                                            settings.Properties.EditFormat = EditFormat.Custom;
                                            settings.Theme = "Material";
                                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                           settings.Attributes.Clear();
+                                           //settings.Attributes.Clear();
+                                           settings.Properties.NullText = "dd/MM/yyyy";
                                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                        }).Bind(Model[0].FechaRango1).GetHtml()
                                         </div>
-                                        <div class="col-sm-2" style="top:20px">
+                                        <div class="col-sm-2">
+                                            <b>Fecha al:</b>
                                             @Html.DevExpress().DateEdit(settings =>
                                        {
                                            settings.Name = "FechaRango2";
@@ -99,7 +102,8 @@
                                            settings.Properties.EditFormat = EditFormat.Custom;
                                            settings.Theme = "Material";
                                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                           settings.Attributes.Clear();
+                                           settings.Properties.NullText= "dd/MM/yyyy";
+                                           //settings.Attributes.Clear();
                                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                        }).Bind(Model[0].FechaRango2).GetHtml()
