--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/RecargaCombustibles/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/RecargaCombustibles/Index.cshtml
@@ -1,4 +1,17 @@
 ﻿@model MVC.Presentacion.Models.RecargaCombustibleModel
+@using PagedList.Mvc;
+@using PagedList;
+@Html.DevExpress().GetStyleSheets(
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
+        )
+@Html.DevExpress().GetScripts(
+            new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+            new Script { ExtensionSuite = ExtensionSuite.Editors },
+            new Script { ExtensionSuite = ExtensionSuite.GridView }
+        )
 <!DOCTYPE html>
 <html>
 <head>
@@ -46,8 +59,8 @@
                                     <div class="form-group">
                                         <b>Kilometraje Actual</b>
                                         @Html.LabelFor(m => m.Chofer)
-                                    </div>                                   
-                                </div>                         
+                                    </div>
+                                </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <b>Kilometraje Actual</b>
@@ -65,7 +78,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <b>Litros Recargados</b>
-                                        @Html.TextBoxFor(m => m.LitrosRecargados, Model.LitrosRecargados.ToString(), new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.LitrosRecargados, Model.LitrosRecargados.ToString(), new { @class = "form-control number" })
                                     </div>
                                 </div>
                                 <div class="col-md-3">
@@ -106,15 +119,15 @@
                                     <div class="form-group">
                                         @if (ViewBag.EsEdicion == null)
                                         {
-                                            <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
-                                                <i class="zmdi zmdi-plus"></i>
-                                            </button>
+                                        <button btn id="BtnCrear" formaction="Crear" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                            <i class="zmdi zmdi-plus"></i>
+                                        </button>
                                         }
                                         else
                                         {
-                                            <button btn id="btnUpDate" formaction="Modificar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
-                                                <i class="zmdi zmdi-swap"></i>
-                                            </button>
+                                        <button btn id="btnUpDate" formaction="Modificar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                            <i class="zmdi zmdi-swap"></i>
+                                        </button>
                                         }
                                     </div>
                                 </div>
@@ -161,11 +174,28 @@
                                                     <td>mant.Chofer</td>
                                                     <td>mant.DescripcionMtto</td>
                                                     <td>mant.FechaMtto</td>
-                                                    <td></td>
+                                                    <td>
+                                                        <a href="@Url.Action("Eliminar", "RecargaCombustibles" , new { Id= mant.Id_DetalleMtto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                            <i class="material-icons">delete</i>
+                                                            <span>Eliminar</span>
+                                                        </a>
+                                                        <a href="@Url.Action("Modificar", "RecargaCombustibles" , new { Id=mant.Id_DetalleMtto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                            <i class="material-icons">edit</i>
+                                                            <span>Editar</span>
+                                                        </a>
+                                                    </td>
                                                 </tr>
                                             }
                                         </tbody>
                                     </table>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-6">
+                                    Página @(ViewBag.Manteniminetos.PageCount < ViewBag.Manteniminetos.PageNumber ? 0 : ViewBag.Manteniminetos.PageNumber) de @ViewBag.Manteniminetos.PageCount
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    @Html.PagedListPager((IPagedList)ViewBag.Asignaciones, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
                                 </div>
                             </div>
                         </div>
