CJAL-08/02/2019-Se agrega validacion de campos vacios en formulario Pedido (Part1)

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
@@ -179,7 +179,7 @@
                                            settings.Properties.ValueField = "IdEstadoRep";
                                            settings.Properties.ValueType = typeof(byte?);
                                        }).BindList(ViewBag.ListaEstados).Bind(Model.cliente.Locacion.IdEstadoRep.Value).GetHtml()
-                                            @Html.ValidationMessageFor(m => m.cliente.Locacion.IdEstadoRep, "", new { @class = "alert-danger" })
+                                            @*@Html.ValidationMessageFor(m => m.cliente.Locacion.IdEstadoRep, "", new { @class = "alert-danger" })*@
                                         </div>
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
